<!--
  ~ Copyright (C) 2015 Twitter, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Digits Terms and Conditions-->
    <!--suppress MissingTranslation StringFormatMatches-->
    <string name="dgts__terms_text">By tapping %1$sSend confirmation code%1$s above, %6$sDigits by Twitter%5$s will send you an SMS to confirm your phone number. On the next screen, you can choose “Resend code” to receive a new SMS or “Call me” to initiate a phone call to confirm your phone number. Message, call &amp; data rates may apply.</string>
    <!--suppress MissingTranslation-->
    <string name="dgts__terms_text_call_me">By tapping %1$sCall me%1$s above, %6$sDigits by Twitter%5$s will send you a voice call to confirm your phone number. Call &amp; data rates may apply.</string>
    <!--suppress MissingTranslation-->
    <string name="dgts__terms_text_create">By tapping %1$sCreate account%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your phone number with %4$s, and that other users of %4$s can discover you by phone number.</string>
    <!--suppress MissingTranslation-->
    <string name="dgts__terms_text_updated">By tapping %1$sContinue%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your %7$sDigits phone number and/or email address%5$s with %4$s, and other users of %4$s can discover you by phone number and/or email.</string>
    <!--suppress MissingTranslation-->
    <string name="dgts__terms_text_sign_in">By tapping %1$sContinue%1$s above, your %7$sDigits phone number and/or email address%5$s will be shared with %4$s and other users of %4$s can discover you by phone number and/or email.</string>
    <!--suppress MissingTranslation-->
    <string name="dgts_pin_code_terms">You have previously set a 2-step verification code on digits.com</string>
    <!--suppress MissingTranslation-->
    <string name="dgts__terms_email_request">By tapping %1$sContinue%1$s above, you are adding this email to your Digits account. You agree that this app and %7$sall apps listed in your Digits account%5$s can access this email address and their users can discover you by email.</string>

    <!-- button text for sign up -->
    <!--suppress MissingTranslation-->
    <string name="dgts__login_digits_text">Use my phone number</string>

    <!-- Phone number screen -->
    <!-- Text on the top of the screen -->
    <!--suppress MissingTranslation-->
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <!-- hint for the user on a input field -->
    <!--suppress MissingTranslation-->
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <!--suppress MissingTranslation, UnusedResources-->
    <string name="dgts__confirmation_code">Confirmation code</string>
    <!-- Confirmation code screen -->
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__pin_code_verification_title">Enter 2-step verification code</string>
    <!-- Button text -->
    <!--suppress UnusedResources MissingTranslation-->
    <string name="dgts__resend_confirmation_text">Resend confirmation code</string>
    <!-- Button text -->
    <!--suppress UnusedResources MissingTranslation  -->
    <string name="dgts__resend_confirmation_button_code">Resend code</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__success_desc">Success Icon</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__okay">Okay</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__not_now">Not now</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__try_again_phone_number">Please check your number and try again.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <!--suppress UnusedResources MissingTranslation-->
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__network_error">Please check your network and try again.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__try_another_phone">Try a different phone number</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__dismiss">Dismiss</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__try_again">Try Again</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__image_header_description">Image header for login</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__find_your_friends">Find your friends</string>
    <!-- Terms and conditions for upload address book screen -->
    <!--suppress MissingTranslation -->
    <string name="dgts__upload_contacts">We use Digits by Twitter to find more of your friends who use this app. When you tap Okay, we\'ll upload your address book to Digits by Twitter so that we can help you find users of %1$s that you know or help other users of %1$s find you.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__verification_code">Verification code</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__call_me">Call me</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__calling">Calling…</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__unsupported_operator_error">Unable to send this number an SMS message.</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__email_request_edit_hint">Email address</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__create_account">Create account</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__send_confirmation_code">Send confirmation code</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__continue">Continue</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__sending">Sending…</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__done">Done</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__email_request_title">Enter email address</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__try_again_email">Please check your email and try again</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__invalid_email">Invalid Email. Try Again</string>
    <!--suppress MissingTranslation -->
    <string name="dgts__confirmationEditTextPlaceholder">------</string>
</resources>
