<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Twitter, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:digits="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/dgts__Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dgts__titleText"
            style="@style/dgts__EnterConfirmationCodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dgts__confirmation_edit_hint"/>

        <com.digits.sdk.android.LinkTextView
            android:id="@+id/dgts__editPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dgts__titleText"
            android:layout_marginBottom="@dimen/dgts__margin_bottom"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <!--This fontFamily attribute of the SpacedEditText
         is honored and required from api 16. It will be ignored for all lower versions.-->
        <com.digits.sdk.android.SpacedEditText
            android:id="@+id/dgts__confirmationEditText"
            digits:spacingProportion="1.1"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/dgts__confirmation_code_text_size"
            android:cursorVisible="false"
            android:typeface="monospace"
            android:fontFamily="monospace"
            android:background="@color/tw__transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dgts__margin_bottom"
            android:layout_below="@+id/dgts__editPhoneNumber"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="number"/>
        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <com.digits.sdk.android.StateButton
            android:id="@+id/dgts__createAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tw__login_btn_height"
            android:layout_marginBottom="@dimen/dgts__margin_bottom"
            android:layout_below="@+id/dgts__confirmationEditText"/>

        <com.digits.sdk.android.InvertedStateButton
            android:id="@+id/dgts__resendConfirmationButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/tw__login_btn_height"
            android:layout_marginRight="@dimen/dgts__margin_right"
            android:layout_marginBottom="@dimen/dgts__margin_bottom"
            android:layout_below="@+id/dgts__createAccount"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/strut"
            digits:finishStateText="@string/dgts__done"
            digits:progressStateText="@string/dgts__sending"
            digits:startStateText="@string/dgts__resend_confirmation_button_code"/>

        <com.digits.sdk.android.InvertedStateButton
            android:id="@+id/dgts__callMeButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/tw__login_btn_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dgts__margin_left"
            android:layout_marginBottom="@dimen/dgts__margin_bottom"
            android:layout_below="@+id/dgts__createAccount"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@id/strut"
            digits:finishStateText="@string/dgts__calling"
            digits:progressStateText="@string/dgts__calling"
            digits:startStateText="@string/dgts__call_me"/>
        <TextView
            android:id="@+id/dgts__countdownTimer"
            style="@style/dgts__CountDownTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dgts__termsTextCreateAccount"
            style="@style/dgts__Terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dgts__resendConfirmationButton"/>
    </RelativeLayout>

</ScrollView>